# lit-fhir

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .jvmopts  .sbtopts  .scala-steward.conf  .scalafmt.conf  Extension.scala.patch  LICENSE  Makefile  NOTICE  README.md  apply_patches.sh  bench.patch  build.sbt  bundle_decoding.patch  resource_identifier.patch
rust/: Cargo.toml  err
rust/src/: lib.rs
rust/src/core/: FHIRObject.rs  LitError.rs  mod.rs
rust/src/core/model/: Address.rs  Age.rs  Annotation.rs  Attachment.rs  BackboneElement.rs  CodeableConcept.rs  Coding.rs  ContactDetail.rs  ContactPoint.rs  Contributor.rs  Count.rs  DataRequirement.rs  Distance.rs  Dosage.rs  Duration.rs  Expression.rs  Extension.rs  FHIRElement.rs  FHIRObject.rs  HumanName.rs  Identifier.rs  Meta.rs  Money.rs  ParameterDefinition.rs  Period.rs  Quantity.rs  Range.rs  Ratio.rs  Reference.rs  RelatedArtifact.rs  Resource.rs  SampledData.rs  Signature.rs  Timing.rs  TriggerDefinition.rs  UnionAliases.rs  UsageContext.rs  mod.rs
rust/src/hl7/: mod.rs
rust/src/hl7/model/: Account.rs  ActivityDefinition.rs  AdverseEvent.rs  AllergyIntolerance.rs  Appointment.rs  AppointmentResponse.rs  AuditEvent.rs  Basic.rs  Binary.rs  BiologicallyDerivedProduct.rs  BodyStructure.rs  Bundle.rs  CapabilityStatement.rs  CarePlan.rs  CareTeam.rs  CatalogEntry.rs  ChargeItem.rs  ChargeItemDefinition.rs  Claim.rs  ClaimResponse.rs  ClinicalImpression.rs  CodeSystem.rs  Communication.rs  CommunicationRequest.rs  CompartmentDefinition.rs  Composition.rs  ConceptMap.rs  Condition.rs  Consent.rs  Contract.rs  (+122 more)
(+11702 files in other folders)
