[package]
name = "lit"
version = "0.0.1"
authors = ["Hugh Simpson <hugh.simpson@babylonhealth.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
chrono = "0.4.0"
im = "15.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#[dev-dependencies]
#env_logger = "*"