[package]
name = "lit"
version = "0.0.1"
authors = ["Hugh Simpson <hugh.simpson@babylonhealth.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
bytes = "0.4.11"
chrono = "0.4.0"
datetime = "0.5.2"
dyn-clone = "1.0.9"
im = "15.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
uuid = { version = "0.4", features = ["serde", "v4"] }
#[dev-dependencies]
#env_logger = "*"
